--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,40 @@
-div.col-2.box{
+div.col-2.box {
     background-color: blue;
     border: 4px solid lime;
     color: deeppink;
+    height: 6rem;
+    padding: 30px;
+    font-size: 20px;
+    text-align: center;
+    font-weight: bolder;
+}
+
+div.col-2.fizz {
+    background-color: yellow;
+    border: 4px solid firebrick;
+    color: black;
+    height: 6rem;
+    padding: 30px;
+    font-size: 20px;
+    text-align: center;
+    font-weight: bolder;
+}
+
+div.col-2.buzz {
+    background-color: green;
+    border: 4px solid purple;
+    color: aqua;
+    height: 6rem;
+    padding: 30px;
+    font-size: 20px;
+    text-align: center;
+    font-weight: bolder;
+}
+
+div.col-2.fizz-buzz {
+    background-color: grey;
+    border: 4px solid orangered;
+    color: magenta;
     height: 6rem;
     padding: 30px;
     font-size: 20px;
